<resources>
    <string name="app_name">BookIt</string>
    <string name="action_profile">Profile</string>

    <!-- Strings used for fragments for navigation -->
    <string name="nav_bar_Search">Search</string>
    <string name="nav_bar_Borrowed">Borrowed</string>
    <string name="nav_bar_MyRequests">My Requests</string>
    <string name="nav_bar_MyBooks">My Books</string>
    <string name="nav_bar_AddBook">Add Book</string>
    <string name="nav_bar_ManageRequests">Manage Requests</string>
    <string name="login">TextView</string>
    <string name="loginButton">Login</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="new_to_bookit_sign_up">New to BookIt? Sign up!</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_image">Book Image</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="status">Status</string>
    <string name="borrower_n_a">Borrower: N/A</string>

    <string name="search_for_a_book_and_request">Search for a book and Request</string>
    <string name="enter_a_name">Enter a name?</string>
    <string name="for_testing">for testing</string>

    <string name="my_profile_full_name">Full Name</string>
    <string name="profile_icon">Profile icon</string>
    <string name="my_profile_user_name">User Name</string>
    <string name="my_profile_email">Email</string>
    <string name="my_profile_phone">Phone</string>
    <string name="edit_profile_button">Edit Profile Button</string>
    <string name="phone_icon">Phone icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="save_changes">Save Changes</string>

    <string name="borrower">Borrower</string>
    <string name="comments">Comments</string>
    <string name="add_book">Add book</string>
    <string name="edit_book">Edit book</string>
    <string name="delete_book">Delete book</string>
    <string name="scan_book">Scan Book</string>

</resources>