<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/BorrowedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_borrowed"
        android:title="@string/nav_bar_Borrowed" />

    <item
        android:id="@+id/MyRequestsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_request"
        android:title="@string/nav_bar_MyRequests" />

    <item
        android:id="@+id/SearchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_bar_Search" />

    <item
        android:id="@+id/ScanBookActivity"
        android:enabled="true"
        android:icon="@drawable/ic_request"
        android:title="@string/scan_book" />


</menu>