<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/book_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/book_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/book_image"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:textSize="16sp"
            android:text="@string/book_title"
            android:textColor="#000000"
             />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"

            android:text="@string/author" />

        <TextView
            android:id="@+id/isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/isbn" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/borrower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/borrower_n_a" />

    </LinearLayout>


</LinearLayout>
