<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="false"
            android:paddingTop="10dp"
            app:navigationIcon="@drawable/abc_vector_test"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="User Information" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="30dp"
                android:text="@string/my_profile_full_name"
                app:drawableTint="#591414"
                app:layout_constraintStart_toEndOf="@+id/profile_icon3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_icon3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/profile_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_action_account"
                app:tint="#000000" />

            <ImageView
                android:id="@+id/email_icon3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/email_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
                app:srcCompat="@android:drawable/ic_dialog_email"
                app:tint="#100505" />

            <TextView
                android:id="@+id/emailHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="35dp"
                android:text="@string/my_profile_email"
                app:layout_constraintStart_toEndOf="@+id/email_icon3"
                app:layout_constraintTop_toBottomOf="@+id/userNameTextView" />

            <TextView
                android:id="@+id/usernameHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="35dp"
                android:text="@string/my_profile_user_name"
                app:layout_constraintStart_toEndOf="@+id/profile_icon3"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="35dp"
                android:contentDescription="@string/phone_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                app:srcCompat="@android:drawable/stat_sys_phone_call"
                app:tint="#000000" />

            <TextView
                android:id="@+id/phoneHeader3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="35dp"
                android:text="@string/my_profile_phone"
                app:layout_constraintStart_toEndOf="@+id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="9dp"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@+id/phoneHeader3"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="9dp"
                android:scrollHorizontally="false"
                android:text="TextView"
                android:textColor="#0B0A0A"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/email_icon3"
                app:layout_constraintTop_toBottomOf="@+id/emailHeader3"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="9dp"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/profile_icon3"
                app:layout_constraintTop_toBottomOf="@+id/nameHeader3"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="9dp"
                android:text="TextView"
                android:textColor="#0B0A0A"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/profile_icon3"
                app:layout_constraintTop_toBottomOf="@+id/usernameHeader3"
                app:layout_constraintWidth_percent="0.6" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>